<resources>

    <string name="genebe_app_name">Genebe</string>

    <!--메인 페이지 텍스트들-->
    <string name="title_NewsFeed">뉴스피드</string>
    <string name="tab_title_followers">FOLLOWERS</string>
    <string name="tab_title_random">HOT</string>

    <string name="title_Routekeep">랜덤</string>
    <string name="title_Notification">알림</string>
    <string name="title_MyPage">MY</string>

    <string name="action_back">뒤로가기</string>
    <string name="action_search">검색</string>
    <string name="action_add">추가</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>

    <!--검색 페이지 텍스트들-->
    <string name="search_by_Person">사람</string>
    <string name="search_by_Tag">태그</string>
    <string name="search_by_Location">장소</string>

    <string name="search_button">찾기</string>


    <!--업로드 페이지 텍스트들-->
    <string name="mypage_profile_image">프로필이미지</string>
    <string name="add_user_button">사용자 추가</string>
    <string name="mypage_upload">업로드</string>
    <string name="mypage_follower">팔로워</string>
    <string name="mypage_following">팔로잉</string>
    <string name="line">line</string>
    <string name="followers">FOLLOWERS</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_upload_summary">UploadSummaryActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sec4settings">settings</string>
    <string name="sec4gridfilled">gridfilled</string>
    <string name="Mycoarseshare">나의 코스 공유</string>
    <string name="action_close">close</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!--for sign up-->
    <string name="hint_name">아이디</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_confirm">비밀번호 확인</string>
    <string name="hint_first_name">이름</string>
    <string name="hint_last_name">성</string>
    <string name="hint_email">이메일</string>
    <string name="text_sign_up">회원가입</string>
    <string name="text_sign_in">로그인</string>
    <string name="title_activity_comment">Comment</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_board_add">BoardAddActivity</string>

</resources>
