<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.AppCompat.Light"
    android:id="@+id/sec4_mypage_fragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="end">

            <ImageButton
                android:contentDescription="@string/sec4settings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_settings"
                />
            <ImageButton
                android:contentDescription="@string/sec4gridfilled"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_gridfilled"/>
        </LinearLayout>
        <ImageView
            android:contentDescription="@string/mypage_profile_image"
            android:id="@+id/imageView1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textView1"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:scaleType="centerCrop"
            android:text="@string/genebe_app_name"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/card_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/sec4upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mypage_upload"
                android:textSize="15sp"
                android:layout_weight="1"
                android:singleLine="false"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />
            <TextView
                android:id="@+id/sec4followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mypage_follower"
                android:textSize="15sp"
                android:layout_weight="1"
                android:gravity="center" />
            <TextView
                android:id="@+id/sec4following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mypage_following"
                android:textSize="15sp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sec4rv" />

</LinearLayout>